xine-lib (1-rc1)
  * libdvdnav: fix some undetected stills (fixes "Red Dragon" RC2 scene selection)
  * video output plugin for libstk
  * bugfix: detection of external subtitle formats
  * support for arbitrary aspect ratios
  * DVD menu button group handling in spu decoders (software and dxr3)
    (fixes wrong initial menu highlights on "Star Trek 3" SE RC2 for the dxr3)
  * get the correct duration and bitrate for MP3s with Xing headers (VBR)
  * fix alignment check in configure (fixes weird colours with MPEG2 on PPC)
  * improved expand plugin (increased performance, allow subtitle shifting)
  * ripping feature - save streams to local files. (RIP = RIP Input Plugin)
    example: xine stream_mrl#rip:file.raw
  * MPEG demuxer fixes (support VLC streams)
  * simple VCR functionality added to DVB input plugin
    just press MENU2 (that is for example F2 in gxine) to start/stop recording
  * display channel number and name in DVB mode
  * first steps towards AMD64 support (thanks to Adrian Schroeter of SuSE)
  * Add support for 4.1 and 5 channel speaker setups.
  * Allow a52 passthru to be switchied on and off without having to exit xine.
    One has to stop playing, and then restart playing for it to activate.
  * Fix .mp3 content detection for .mp3 files with a header or ID3.
  * Fix detection of mpeg1/mpeg2 in demux_mpeg_pes.
  * Fix long standing problem with alsa not working on some audio cards
    when using 6 analogue channels for output.
  * Fix bug in playing A52 .wav files via SPDIF passthrough.
  * Improve demux of transport streams with PMT stream IDs > 0x80.
  * fix aspect ratio of MPEG1 streams
  * Add support for TITLE= and CHAPTER*= comment in ogm files
  * fix deadlock/freeze problems in audio output thread
  * Don't add the data track to the autoplay list for Audio CDs (Linux)
  * dxr3: fix stuttering playback of some non-MPEG content
  * fix playback of AVIs with mp3 VBR
  * fix some asf demuxer bugs