@@ -1,4 +1,5 @@
 xine-lib (1-rc1)
+  * add support for double and multi-buffering to video_out_pgx64
   * libdvdnav: fix some undetected stills (fixes "Red Dragon" RC2 scene selection)
   * video output plugin for libstk
   * bugfix: detection of external subtitle formats
